--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.ModulePlanner"
+    mainClassName = "seedu.duke.Duke"
 }
 
 shadowJar {
