--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,7 +50,7 @@ jobs:
         run: runtest.bat
 
       - name: Perform all Regression Tests (Windows)
-        if: always() && runner.os == 'Windows'
+        if: runner.os == 'Windows'
         working-directory: ${{ github.workspace }}/text-ui-test/
         shell: cmd
         run: runtestmain.bat
